5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1644_869.log
== TEST (2019-04-10 22:47:12) 
-- CODE:
x = float(input())

if (x%5 ==> 200)
-- ERROR:
File "XXXX", line 3
    if (x%5 ==> 200)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:47:20) 
-- CODE:
x = float(input())

if (x%5 == 200):
-- ERROR:
File "XXXX", line 4
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:48:42) 
-- CODE:
x = float(input())

if (x%5 == 200):
	  mensagem = "você recebeu um desconto de 5%"
else:
	mensagem = "compra concluida"
-- ERROR:
File "XXXX", line 4
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:48:55) 
-- CODE:
x = float(input("a"))

if (x%5 == 200):
	  mensagem = "você recebeu um desconto de 5%"
else:
	mensagem = "compra concluida"
-- ERROR:
File "XXXX", line 4
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:49:03) 
-- CODE:
x = float(input("a"))

if (x%5 == 200):
	  mensagem = "você recebeu um desconto de 5%"
else:
	mensagem = "compra concluida"
print(mensagem)
-- OUTPUT:
compra concluida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:49:13) 
-- CODE:
x = float(input("a"))

if (x%5 == 200):
	  mensagem = "você recebeu um desconto de 5%"
else:
	mensagem = "compra concluida"
print(mensagem)
-- OUTPUT:
compra concluida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:49:17) 
-- CODE:
x = float(input("a"))

if (x%5 == 200):
	  mensagem = "você recebeu um desconto de 5%"
else:
	mensagem = "compra concluida"
print(mensagem)
-- OUTPUT:
compra concluida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:49:21) 
-- CODE:
x = float(input("a"))

if (x//5 == 200):
	  mensagem = "você recebeu um desconto de 5%"
else:
	mensagem = "compra concluida"
print(mensagem)
-- OUTPUT:
compra concluida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:49:26) 
-- CODE:
x = float(input("a"))

if (x//5 == 200):
	  mensagem = "você recebeu um desconto de 5%"
else:
	mensagem = "compra concluida"
print(mensagem)
-- EXECUTION TIME:
0.122929
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
compra concluida
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
compra concluida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:49:31) 
-- CODE:
x = float(input("a"))

if (x%5 == 200):
	  mensagem = "você recebeu um desconto de 5%"
else:
	mensagem = "compra concluida"
print(mensagem)
-- EXECUTION TIME:
0.174225
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
compra concluida
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
compra concluida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:49:36) 
-- CODE:
x = float(input("a"))

if (x%5 == 200):
	  mensagem = "você recebeu um desconto de 5%"
else:
	mensagem = "compra concluida"
print(mensagem)
-- EXECUTION TIME:
0.154907
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
compra concluida
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
compra concluida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:50:17) 
-- CODE:
x = float(input("a"))

if (x%5 == 200):
	  mensagem = "você recebeu um desconto de 5%"
else:
	mensagem = "compra concluida"
print(round(mensagem,2))
-- EXECUTION TIME:
0.145466
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/869/main.py", line 7, in <module>
    print(round(mensagem,2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:50:33) 
-- CODE:
x = float(input("a"))

if (x%5 == 200):
	  mensagem = "você recebeu um desconto de 5%"
else:
	mensagem = "compra concluida"
print(round(mensagem,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(mensagem,2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:50:43) 
-- CODE:
x = float(input("a"))

if (x%5 == 200):
	  mensagem = "você recebeu um desconto de 5%"
else:
	mensagem = "compra concluida"
print(round(mensagem,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(mensagem,2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:51:07) 
-- CODE:
x = float(input("a"))

if (x%5 == 200):
	  mensagem = "você recebeu um desconto de 5%"
else:
	mensagem = "compra concluida"
print(round(mensagem,2))
-- EXECUTION TIME:
0.137574
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/869/main.py", line 7, in <module>
    print(round(mensagem,2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:51:08) 
-- CODE:
x = float(input("a"))

if (x%5 == 200):
	  mensagem = "você recebeu um desconto de 5%"
else:
	mensagem = "compra concluida"
print(round(mensagem,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(mensagem,2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:51:15) 
-- CODE:
x = float(input("a"))

if (x == 200%5):
	  mensagem = "você recebeu um desconto de 5%"
else:
	mensagem = "compra concluida"
print(round(mensagem,2))
-- EXECUTION TIME:
0.202845
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/869/main.py", line 7, in <module>
    print(round(mensagem,2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:51:19) 
-- CODE:
x = float(input("a"))

if (x == 200//5):
	  mensagem = "você recebeu um desconto de 5%"
else:
	mensagem = "compra concluida"
print(round(mensagem,2))
-- EXECUTION TIME:
0.133279
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/869/main.py", line 7, in <module>
    print(round(mensagem,2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:51:20) 
-- CODE:
x = float(input("a"))

if (x == 200//5):
	  mensagem = "você recebeu um desconto de 5%"
else:
	mensagem = "compra concluida"
print(round(mensagem,2))
-- EXECUTION TIME:
0.166089
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/869/main.py", line 7, in <module>
    print(round(mensagem,2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:51:20) 
-- CODE:
x = float(input("a"))

if (x == 200//5):
	  mensagem = "você recebeu um desconto de 5%"
else:
	mensagem = "compra concluida"
print(round(mensagem,2))
-- EXECUTION TIME:
0.147228
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/869/main.py", line 7, in <module>
    print(round(mensagem,2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:51:34) 
-- CODE:
x = float(input("a"))

if (x%5 == 200):
	  mensagem = "você recebeu um desconto de 5%"
else:
	mensagem = "compra concluida"
print(round(mensagem,2))
-- EXECUTION TIME:
0.150459
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/869/main.py", line 7, in <module>
    print(round(mensagem,2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:52:20) 
-- CODE:
x = float(input("a"))

if (x%5 == 200):
	  mensagem = "você recebeu um desconto de 5%"
else:
	mensagem = "compra concluida"
print(round(mensagem,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(mensagem,2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:52:33) 
-- CODE:
x = float(input("a"))

if (x%5 == 200):
	  mensagem = "você recebeu um desconto de 5%"
else:
	  mensagem = "compra concluida"
print(round(mensagem,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(mensagem,2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:52:39) 
-- CODE:
x = float(input("a"))

if (x%5 == 200):
	  mensagem = "você recebeu um desconto de 5%"
else:
	  mensagem = "compra concluida"
print(round(mensagem))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(mensagem))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:52:50) 
-- CODE:
x = float(input("a"))

if (x%5 == 200):
	  mensagem = "você recebeu um desconto de 5%"
else:
	  mensagem = "compra concluida"
print(mensagem)
-- EXECUTION TIME:
0.135181
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
compra concluida
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
compra concluida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:52:51) 
-- CODE:
x = float(input("a"))

if (x%5 == 200):
	  mensagem = "você recebeu um desconto de 5%"
else:
	  mensagem = "compra concluida"
print(mensagem)
-- OUTPUT:
compra concluida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:53:20) 
-- CODE:
x = float(input("a:"))

if (x == 200%5):
	  mensagem = "você recebeu um desconto de 5%"
else:
	  mensagem = "compra concluida"
print(mensagem)
-- OUTPUT:
compra concluida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:53:47) 
-- CODE:
x = float(input("a:"))

if (x == 200):
	  mensagem = x%5
else:
	  mensagem = x
print(mensagem)
-- OUTPUT:
200.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:53:57) 
-- CODE:
x = float(input("a:"))

if (x == 200):
	  mensagem = x%5
else:
	  mensagem = x
print(mensagem)
-- OUTPUT:
200.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:54:01) 
-- CODE:
x = float(input("a:"))

if (x == 200):
	  mensagem = x//5
else:
	  mensagem = x
print(mensagem)
-- OUTPUT:
200.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:54:17) 
-- CODE:
x = float(input("a:"))

if (x == 200):
	  mensagem = x//5 "desconto"
else:
	  mensagem = x
print(mensagem)
-- ERROR:
File "XXXX", line 4
    mensagem = x//5 "desconto"
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:54:19) 
-- CODE:
x = float(input("a:"))

if (x == 200):
	  mensagem = x//5 "desconto"
else:
	  mensagem = x
print(mensagem)
-- ERROR:
File "XXXX", line 4
    mensagem = x//5 "desconto"
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:54:35) 
-- CODE:
x = float(input("a:"))

if (x == 200):
	  mensagem = (x//5 ("desconto"))
else:
	  mensagem = x
print(mensagem)
-- OUTPUT:
200.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:54:52) 
-- CODE:
x = float(input("a:"))

if (x >= 200):
	  mensagem = (x//5 ("desconto"))
else:
	  mensagem = x
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    mensagem = (x//5 ("desconto"))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:55:02) 
-- CODE:
x = float(input("a:"))

if (x >= 200):
	  mensagem = x//5 
else:
	  mensagem = x
print(mensagem)
-- OUTPUT:
40.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:55:11) 
-- CODE:
x = float(input("a:"))

if (x >= 200):
	  mensagem = x%5 
else:
	  mensagem = x
print(mensagem)
-- EXECUTION TIME:
0.129491
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
0.09000000000000341
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
0.5300000000000011
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:55:12) 
-- CODE:
x = float(input("a:"))

if (x >= 200):
	  mensagem = x%5 
else:
	  mensagem = x
print(mensagem)
-- OUTPUT:
0.09000000000000341
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:55:20) 
-- CODE:
x = float(input("a:"))

if (x >= 200):
	  mensagem = x%5 
else:
	  mensagem = x
print(mensagem)
-- OUTPUT:
0.09000000000000341
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:55:25) 
-- CODE:
x = float(input("a:"))

if (x >= 200):
	  mensagem = x//5 
else:
	  mensagem = x
print(mensagem)
-- OUTPUT:
40.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:55:51) 
-- CODE:
x = float(input("a:"))

if (x >= 200):
	  mensagem = x//0.2 
else:
	  mensagem = x
print(mensagem)
-- OUTPUT:
1000.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:56:05) 
-- CODE:
x = float(input("a:"))

if (x >= 200):
	  mensagem = x%5 
else:
	  mensagem = x
print(mensagem)
-- OUTPUT:
0.09000000000000341
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:56:09) 
-- CODE:
x = float(input("a:"))

if (x >= 200):
	  mensagem = x%5 
else:
	  mensagem = x
print(mensagem)
-- OUTPUT:
0.09000000000000341
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:56:13) 
-- CODE:
x = float(input("a:"))

if (x >= 200):
	  mensagem = x%0.2 
else:
	  mensagem = x
print(mensagem)
-- OUTPUT:
0.08999999999999231
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:58:56) 
-- CODE:
x = float(input("a:"))

if (x >= 200):
	  mensagem = (x/5)%5 
else:
	  mensagem = x
print(mensagem)
-- OUTPUT:
0.018000000000000682
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:59:09) 
-- CODE:
x = float(input("a:"))

if (x >= 200):
	  mensagem = (x/5)//5 
else:
	  mensagem = x
print(mensagem)
-- OUTPUT:
8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:59:22) 
-- CODE:
x = float(input("a:"))

if (x >= 200):
	  mensagem = (x/0.5)//5 
else:
	  mensagem = x
print(mensagem)
-- OUTPUT:
80.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:59:30) 
-- CODE:
x = float(input("a:"))

if (x >= 200):
	  mensagem = (x/5)//5 
else:
	  mensagem = x
print(mensagem)
-- OUTPUT:
8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:00:52) 
-- CODE:
x = float(input("a:"))

if (x >= 200):
	  mensagem = (x/20)+x
else:
	  mensagem = x
print(mensagem)
-- OUTPUT:
210.0945
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:01:01) 
-- CODE:
x = float(input("a:"))

if (x >= 200):
	  mensagem = (x/20)
else:
	  mensagem = x
print(mensagem)
-- OUTPUT:
10.0045
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:01:15) 
-- CODE:
x = float(input("a:"))

if (x >= 200):
	  mensagem = (x/20)-x
else:
	  mensagem = x
print(mensagem)
-- EXECUTION TIME:
0.143613
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
-190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
-190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:01:15) 
-- CODE:
x = float(input("a:"))

if (x >= 200):
	  mensagem = (x/20)-x
else:
	  mensagem = x
print(mensagem)
-- OUTPUT:
-190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:01:33) 
-- CODE:
x = float(input("a:"))

if (x >= 200):
	  mensagem = (-x/20)+x
else:
	  mensagem = x
print(mensagem)
-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:01:57) 
-- CODE:
x = float(input("a:"))

if (x >= 200):
	  mensagem = (-x/20)+x
else:
	  mensagem = x
print(mensagem)
-- EXECUTION TIME:
0.193649
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:01:58) 
-- CODE:
x = float(input("a:"))

if (x >= 200):
	  mensagem = (-x/20)+x
else:
	  mensagem = x
print(mensagem)
-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:02:13) 
-- CODE:
x = float(input("a:"))

if (x >= 200):
	  mensagem = (-x/20)+x
else:
	  mensagem = x
print(round(mensagem,2))
-- EXECUTION TIME:
0.172735
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:36:18) 
-- CODE:
x = float(input("a:"))

if (x >= 200):
	  mensagem = (-x/20)+x
else:
	  mensagem = x
print(round(mensagem,2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
